# integration_test/openapi.json
@@ -580,6 +580,140 @@
           }
         }
       }
+    },
+    "/rpc/test_custom_error": {
+      "post": {
+        "operationId": "TestCustomError",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TestCustomErrorResult"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RPCError"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RPCError"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RPCError"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RPCError"
+                }
+              }
+            }
+          },
+          "501": {
+            "description": "Not Implemented",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RPCError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/rpc/test_map_return": {
+      "post": {
+        "operationId": "TestMapReturn",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TestMapReturnResult"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RPCError"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RPCError"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RPCError"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RPCError"
+                }
+              }
+            }
+          },
+          "501": {
+            "description": "Not Implemented",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RPCError"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -715,6 +849,28 @@
         "type": "object",
         "properties": {
           "empty": {"$ref":"#/components/schemas/EmptyModel"}
+        }
+      },
+      "TestCustomErrorParams": {
+        "type": "object",
+        "properties": {
+        }
+      },
+      "TestCustomErrorResult": {
+        "type": "object",
+        "properties": {
+          "empty": {"$ref":"#/components/schemas/EmptyModel"}
+        }
+      },
+      "TestMapReturnParams": {
+        "type": "object",
+        "properties": {
+        }
+      },
+      "TestMapReturnResult": {
+        "type": "object",
+        "properties": {
+          "result": {"additionalProperties":{"$ref":"#/components/schemas/TextModel"},"type":"object"}
         }
       }
       ,
